--- a/index.html
+++ b/index.html
@@ -1,4 +1,49 @@
+<!DOCTYPE html>
 <html>
-<head>Header</head>
-Hello, world.
-</html>
+<head>
+    <title>Steven Schrimmer's Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Steven Schrimmer's Portfolio</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>    
+            </ul>
+        </nav>
+    </header>
+<main>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I am a software engineer based out of Irvine, California. I specialize in HTML, CSS, JavaScript, Web APIs,
+            Third-Party APIs, Server-Side APIs, 
+            Node JS, Object-Oriented Programming (OOP), 
+            Express js, SQL, Object-Relational Mapping (ORM) 
+            Model-View-Controller (MVC), NoSQL, Progressive Web Applications (PWA), React, MERN.</p>
+    </section>
+<section id="Portfolio">
+    <h2>My Portfolio</h2>
+    <ul>
+        <li>
+        <img src="2024-bmw-m3-110-1674509061.jpg" alt="Project 1">
+        <h3>Project 1 Title</h3>
+        <p>Project 1 Description</p>
+    </li>
+    <li>
+        <img src="" alt="Project 2">
+        <h3>Project 2 Title</h3>
+        <p>Project 2 Description</p>
+    </li>
+        <img src="" alt="Project 3">
+        <h3>Project 3 Title</h3>
+        <p>Project 3 Description</p>
+    <li>
+        <img src="" alt="Project 4">
+        <h3>Project 4 Title</h3>
+        <p>Project 4 Description</p>
+    </li>
+    </ul>
+</section>
