--- a/index.html
+++ b/index.html
@@ -28,22 +28,34 @@
     <h2>My Portfolio</h2>
     <ul>
         <li>
-        <img src="2024-bmw-m3-110-1674509061.jpg" alt="Project 1">
-        <h3>Project 1 Title</h3>
-        <p>Project 1 Description</p>
+        <img src="images/2024-bmw-m3-110-1674509061.jpg" alt="Project 1">
+        <h3>2023 BMW M3 Specifications Sheet</h3>
+        <p>I worked on this project for fun because I love the BMW M cars and the M3 is 
+            one of my favorites, so I created a specification sheet for fun
+        </p>
     </li>
     <li>
-        <img src="" alt="Project 2">
-        <h3>Project 2 Title</h3>
-        <p>Project 2 Description</p>
+        <img src="images/pexels-harsch-shivam-2007647.jpg" alt="Project 2">
+        <h3>Some sort of tech web application</h3>
+        <p>I chose tech related project because technology is something I would really like to get in to</p>
     </li>
-        <img src="" alt="Project 3">
-        <h3>Project 3 Title</h3>
-        <p>Project 3 Description</p>
+        <img src="images/pexels-david-mcbee-730547.jpg" alt="Project 3">
+        <h3>FinTech</h3>
+        <p>For most of my career I have been in banking, I've made the decision to move onto the tech industry with a focus on FinTech</p>
     <li>
-        <img src="" alt="Project 4">
-        <h3>Project 4 Title</h3>
-        <p>Project 4 Description</p>
+        <img src="images/pexels-cottonbro-studio-6686455.jpg" alt="Project 4">
+        <h3>Let's Simplify Music</h3>
+        <p>I believe the music streaming services can simplify their platforms</p>
     </li>
     </ul>
-</section>
+</section id="Get in Touch">
+<h2>Get in Touch With Me</h2>
+<form>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name">
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email">
+    <label for="message">Message:</label>
+    <textarea id="
+
+
