--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#My portfolio">Portfolio</a></li>
-                <li><a href="#Get in touch with me">Contact</a></li>    
+                <li><a href="#My portfolio">My Portfolio</a></li>
+                <li><a href="#Get in touch with me">Get in touch with me</a></li>    
             </ul>
         </nav>
     </header>
