changes to HTML

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#My portfolio">My Portfolio</a></li>
-                <li><a href="#Get in Touch with me">Get in Touch with me</a></li>    
+                <li><a href="#Get in Touch With me">Get in Touch With me</a></li>    
             </ul>
         </nav>
     </header>
