changes to links in html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#My portfolio">My Portfolio</a></li>
-                <li><a href="#Get in Touch With me">Get in Touch With me</a></li>    
+                <li><a href="#Get in Touch With me">Get in Touch With Me</a></li>    
             </ul>
         </nav>
     </header>
@@ -50,7 +50,7 @@
         <p>I believe the music streaming services can simplify their platforms</p>
     </li>
     </ul>
-</section id="Get in Touch">
+</section id="Get in Touch With Me">
 <h2>Get in Touch With Me</h2>
 <form>
     <label for="name">Name:</label>
