--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#My portfolio">My Portfolio</a></li>
-                <li><a href="#Get in Touch With me">Get in Touch With Me</a></li>    
+                <li><a href="#portfolio">My Portfolio</a></li>
+                <li><a href="#contact">Get in Touch With Me</a></li>    
             </ul>
         </nav>
     </header>
@@ -24,7 +24,7 @@
             Express js, SQL, Object-Relational Mapping (ORM) 
             Model-View-Controller (MVC), NoSQL, Progressive Web Applications (PWA), React, MERN.</p>
     </section>
-<section id="Portfolio">
+<section id="portfolio">
     <h2>My Portfolio</h2>
     <ul>
         <li>
@@ -50,7 +50,9 @@
         <p>I believe the music streaming services can simplify their platforms</p>
     </li>
     </ul>
-</section id="Get in Touch With Me">
+</section> 
+<section id="contact">
+
 <h2>Get in Touch With Me</h2>
 <form>
     <label for="name">Name:</label>
@@ -58,6 +60,8 @@
     <label for="email">Email:</label>
     <input type="email" id="email" name="email">
     <label for="message">Message:</label>
-    <textarea id="
-
+<textarea>
+    
+</textarea>
+</section>
 
